On mobile fix pointer events, and position of drought score info box

--- a/src/DemoSim.css
+++ b/src/DemoSim.css
@@ -6,3 +6,12 @@
     border: 1px solid #ccc;
     display: block;
 }
+
+canvas
+{
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
